# CCCPDemo

./: .gitignore  .markdownlint.json  CLAUDE.md  README.md  WORKFLOW_QUICKSTART.md  _fix_imports.py  dev-requirements.txt  pyproject.toml  requirements-webapp.txt  requirements.txt
.agents/skills/codex-multi-agent-workflow/: SKILL.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: business-analyst.md  code-reviewer.md  developer.md  project-manager.md  release-manager.md  solution-architect.md
.claude/commands/: clean-dead-code.md  cleanup-agent-package.md  resolve-issue.md  review-codebase.md  review-logging-quality.md  run-multi-agent-workflow.md
.claude/commands/multi-agent-workflow/: 00-requirements-brief.md  01-architecture.md  02-python-pre.md  03-implementation.md  03a-implementation.md  03b-testing.md  04-qa.md  05-python-post.md  06-merge-gate.md  pm-loop.md
.github/agents/: Tableau2PBIHelper.agent.md  ai-agent-architecture-reviewer.agent.md  python-solution-reviewer.agent.md  qa-subagent.agent.md  uncommitted-code-reviewer.agent.md
.github/examples/: multi-agent-workflow-example.md
.github/hooks/: format-and-lint.json
.github/hooks/scripts/: format-and-lint.ps1  format-and-lint.sh
.github/instructions/: copilot-instructions.md
.github/prompts/: clean-dead-code.prompt.md  cleanup-agent-package.prompt.md  resolve-issue.prompt.md  review-codebase.prompt.md  review-logging-quality.prompt.md  run-multi-agent-workflow.prompt.md
.github/prompts/multi-agent-workflow/: 01-architecture.prompt.md  02-python-pre.prompt.md  03-implementation.prompt.md  04-qa.prompt.md  05-python-post.prompt.md  06-merge-gate.prompt.md  README.md
.github/templates/: agent-handoff-contract.md  multi-agent-stage-checklist.md
data/input/: Supermercato.twbx
data/projects/DemoTest/: project.json
data/projects/ProviamoInsieme/: project.json
data/projects/ProvoSola/: project.json
docs/: codex-multi-agent-workflow-guide.md  multi-agent-workflow-guide.md
src/Tableau2PowerBI/: __init__.py
src/Tableau2PowerBI/agents/: __init__.py
src/Tableau2PowerBI/cli/: cancel_stuck_responses.py  pipeline.py  run_assemble_pbip_project.py  run_extraction.py  run_functional_doc.py  run_pipeline.py  run_semantic_model.py  run_skeleton.py  run_target_technical_doc.py
src/Tableau2PowerBI/core/: __init__.py  config.py  json_response.py  llm_output_parsing.py  logging_setup.py  models.py  output_dirs.py  prompt_utils.py  source_detection.py  token_tracker.py
src/Tableau2PowerBI/webapp/: __main__.py  (+11 more)
tests/: conftest.py  support.py
tests/evals/: __init__.py  capture_golden_inputs.py  conftest.py  test_eval_dax_measures.py  test_eval_report_visuals.py  test_eval_semantic_model.py  validators.py
(+174 files in other folders)
